started to fix flickering

--- a/src/app/production/blueprint-details/blueprint-details.component.scss
+++ b/src/app/production/blueprint-details/blueprint-details.component.scss
@@ -92,6 +92,16 @@
     .positivNumber {
         color: $accent3;
     }
+    
+    .negativeProfit {
+        color: $accent2-strong3;
+        font-weight: bold;
+    }
+
+    .positivProfit {
+        color: $accent3-strong3;
+        font-weight: bold;
+    }
 
     .minorInfo {
         font-size: 80%;
